[project]
name = "itfdb"
version = "0.1.0"
description = "Scroll upcoming Los Angeles Dodgers game info on a Raspberry Pi Sense HAT."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dateutil",
    "pytz",
]

# `sense-hat` (and its `RTIMU` C extension) is provided by the Raspberry Pi
# OS apt package `sense-hat`, not by PyPI. The venv must be created with
# `--system-site-packages` so the apt-installed modules are importable.
# See README for setup details.

[tool.uv]
# The Sense HAT bindings live in the *system* Python's dist-packages on
# Raspberry Pi OS. Force uv to use the system interpreter so a venv created
# with `--system-site-packages` actually sees them — a uv-managed download
# of CPython has its own (empty) site-packages and would not.
python-preference = "only-system"

[dependency-groups]
dev = [
    "pre-commit",
    "ruff",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = ["F401"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
